crates/gridwell-writer-typst/tests/snapshots/snapshots__minimal-1x1.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto,),
  align: (left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Value]],
    table.hline(stroke: 0.5pt),
  ),
  [Hello],
)
