crates/gridwell-writer-typst/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Message]],
    table.hline(stroke: 0.5pt),
  ),
  [Status\: degraded\ Retry advised#super[†]],
)

#text(size: 9pt)[#super[†] See runbook section 4\.]
