crates/gridwell-writer-typst/tests/snapshots/snapshots__no-header.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto),
  stroke: none,
  table.header(
  ),
  [a],
  [b],
  [c],
  [d],
)
