crates/gridwell-writer-typst/tests/snapshots/snapshots__numeric-right-align.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Product]],
    [#text(weight: "bold")[Qty]],
    [#text(weight: "bold")[Price]],
    table.hline(stroke: 0.5pt),
  ),
  [Widget],
  [12],
  [3\.50],
  [Gadget],
  [4],
  [19\.99],
)
