crates/gridwell-writer-typst/tests/snapshots/snapshots__raw-html.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Kind]],
    [#text(weight: "bold")[Rendered]],
    table.hline(stroke: 0.5pt),
  ),
  [bold\+italic],
  [],
)
